--- a/Basic_JavaScript_Projects/Project1_expressions_alert/index.html
+++ b/Basic_JavaScript_Projects/Project1_expressions_alert/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
     <script src="JS/main.js"></script>
 </head>
 <body>
